agregado div contenedor

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     
+    <!--DIV CONTENEDOR1-->
+    <div class="container">
+        <div class="row">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas aperiam suscipit animi, non laboriosam repudiandae libero ipsam ratione, veniam eligendi in? Ipsam ab eos in consequatur et ullam facilis aut.</p>
+        </div>
+    </div>
 </body>
 </html>
