--- a/index.html
+++ b/index.html
@@ -1,18 +1,141 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página web WELDING</title>
+    <title>Página de WELDING & SAFETY For Life</title>
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-    
-    <!--DIV CONTENEDOR 1-->
-    <div class="container">
-        <div class="row">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas aperiam suscipit animi, non laboriosam repudiandae libero ipsam ratione, veniam eligendi in? Ipsam ab eos in consequatur et ullam facilis aut.</p>
+<header>
+    <div class="container" id="header_container">
+        <div class="logo">
+            <a href="index.html">
+                <img src="images/Logo_Welding_mini.png" alt="WELDING & SAFETY FOR LIFE">
+            </a>
         </div>
+        <div class="box_topper">
+            <nav>
+                <ul class="menu">
+                    <li class="">
+		                <div class="menu_padre"><a href="#"  class="full"></a><span>¿Quienes Somos?</span></div>
+                    </li>
+                    <li class="menu_extra">
+                        <div class="menu_padre"><a href="#"></a><span>Productos</span>
+                        </div>
+                         <div class="contenedor_sub_menu">
+                            <ul class="sub_menu">
+                            		<li>
+                                        <div class="menu_hijo">
+                                            <a href="#"  class="full"></a>
+                                            <span>Equipos de Protección Personal (EPP)</span>
+                                        </div>
+                                        <ul class="ultra_menu">
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección de Manos
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full">
+                                                        </a>Protección de Cabeza
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección auditiva
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección Piel
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección Visual
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección Respiratoria
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección anti caida
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección Visual
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Protección Visual
+                                                    </div>
+                                                </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <div class="menu_hijo">
+                                            <a href="#"  class="full"></a>
+                                            <span> Consumibles de Proceso de Soldadura</span>
+                                        </div>
+                                        <ul>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Electrodo de soldadura
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                        <a href="#" class="full"></a>Discos de Corte
+                                                    </div>
+                                                </li>
+                                        </ul>
+                                    </li>
+                                    <li>
+                                        <div class="menu_hijo">
+                                            <a href="#"  class="full"></a>
+                                            <span> Accesorios de Proceso de Soldadura</span>
+                                        </div>
+                                        <ul>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                    <a href="#" class="full"></a>Soldadura por Arco Eléctrico (SMAW)
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                    <a href="#" class="full"></a>Soldadura por arco Metálico con Gas (GMAW)
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                    <a href="#" class="full"></a>Soldadura por arco Tungsteno con gas (GTAW)
+                                                    </div>
+                                                </li>
+                                                <li>
+                                                    <div class="menu_nieto">
+                                                    <a href="#" class="full"></a>Soldadura Oxiacetilénica
+                                                    </div>
+                                                </li>
+                                        </ul>
+                                    </li>
+                        </ul>
+                        </div>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+
     </div>
+</header>
+<script src="menu.js"></script>
 </body>
 </html>
