--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                                                 </li>
                                                 <li>
                                                     <div class="menu_nieto">
-                                                    <a href="#" class="full"></a>Soldadura Oxiacetilénica
+                                                    <a href="quienes_somos.html"></a>Soldadura Oxiacetilénica
                                                     </div>
                                                 </li>
                                         </ul>
