--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                                     <a href="#">Soldadura por arco Tungsteno con gas (GTAW)</a>
                                                 </li>
 							                    <li>
-                                                    <a href="#">Lubricantes para sistemas hidráulicos</a>
+                                                    <a href="#">Soldadura Oxiacétilena</a>
 							                    </li>
                                         </ul>
                                     </li>
