--- a/Productos/proteccion_manos.html
+++ b/Productos/proteccion_manos.html
@@ -9,100 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
-<header>
-    <div class="container" id="header_container">
-        <div class="logo">
-            <a href="index.html">
-                <img src="imagenes_productos/Logo_Welding_mini.png" alt="WELDING & SAFETY FOR LIFE">
-            </a>
-        </div>
-        <div class="box_topper">
-            <nav>
-                <ul class="menu">
-                    <li class="">
-		                <div class="menu_padre"><a href="#"  class="full"></a><span>¿Quienes Somos?</span></div>
-                    </li>
-                    <li class="menu_extra">
-                        <div class="menu_padre"><a href="#"></a><span>Productos</span>
-                        </div>
-                         <div class="contenedor_sub_menu">
-                            <ul class="sub_menu">
-                            		<li>
-                                        <div class="menu_hijo">
-                                            <a href="#"  class="full"></a>
-                                            <span>Equipos de Protección Personal (EPP)</span>
-                                        </div>
-                                        <ul class="ultra_menu">
-                                                <li>
-                                                    <a href="Productos/proteccion_manos.html">Protección de Manos</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Protección de Cabeza</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Protección Auditiva</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Protección de Piel</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Protección Respiratoria</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Protección de Pies</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Protección AntiCaida</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Protección Visual</a>
-                                                </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <div class="menu_hijo">
-                                            <a href="#"  class="full"></a>
-                                            <span> Consumibles de Proceso de Soldadura</span>
-                                        </div>
-                                        <ul>
-                                                <li>
-                                                    <a href="#">Electrodo de Soldadura</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Discos de Corte</a>
-                                                </li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <div class="menu_hijo">
-                                            <a href="#"  class="full"></a>
-                                            <span> Accesorios de Proceso de Soldadura</span>
-                                        </div>
-                                        <ul>
-                                                <li>
-                                                    <a href="#">Soldadura por Arco Eléctrico (SMAW)</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Soldadura por arco Metálico con Gas (GMAW)</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Soldadura por arco Tungsteno con gas (GTAW)</a>
-                                                </li>
-							                    <li>
-                                                    <a href="#">Lubricantes para sistemas hidráulicos</a>
-							                    </li>
-                                        </ul>
-                                    </li>
-                        </ul>
-                        </div>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-    </div>
-</header>
-
+<h1>Hola rakel como estás?</h1>
 <script src="menu.js"></script>
 </body>
 </html>
