--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                     <li>
                                         <div class="menu_hijo">
                                             <a href="#"  class="full"></a>
-                                            <span> Consumibles de Proceso de Soldadura</span>
+                                            <span> Consumibles de proceso de Soldadura</span>
                                         </div>
                                         <ul>
                                                 <li>
